@@ -73,10 +73,10 @@
 "C8051F321","0x09","0x59",-1,,"0x4000",512,1024,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x3dff","0x3e00",-1,FALSE,-1,-1,0,FALSE,1024,"C2",0,0,0,0,0,0,0,0,0,
 "C8051F330","0x0a","0x60",-1,,"0x2000",1024,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,0,"C2",0,0,0,0,0,0,0,0,0,
 "C8051F331","0x0a","0x61",-1,,"0x2000",1024,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,0,"C2",0,0,0,0,0,0,0,0,0,
-"C8051F350","0x0b","0x62",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
-"C8051F351","0x0b","0x63",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
-"C8051F352","0x0b","0x64",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
-"C8051F353","0x0b","0x65",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
+"C8051F350","0x0b","0x62",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3","There seem to be in a sfr page although device datasheet dosen't specify paged sfr's.  Ec2drv will play this little game.  These regs are in page f"
+"C8051F351","0x0b","0x63",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
+"C8051F352","0x0b","0x64",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
+"C8051F353","0x0b","0x65",-1,,"0x2000",512,512,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x1dff","0x1e00",-1,FALSE,-1,-1,0,TRUE,FALSE,"C2",0,"0x85","0x86","0xab","0xac","0xce","0xcf","0xd2","0xd3",
 "C8051F410","0x0b","0x67",-1,,"0x8000",512,2048,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x7dff","0x7e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,0,0,0,0,0,0,0,0,
 "C8051F411","0x0b","0x68",-1,,"0x8000",512,2048,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x7dff","0x7e00",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,0,0,0,0,0,0,0,0,
 "C8051F412","0x0b","0x69",-1,,"0x4000",512,2048,FALSE,FALSE,"FLT_SINGLE",-1,-1,"0x3fff","0x4000",-1,FALSE,-1,-1,0,FALSE,FALSE,"C2",0,0,0,0,0,0,0,0,0,
